--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
             <p>
                 Matthew Cobbs<br />
                 Detroit Web Developer<br />
-                [matthew.cobbs@gmail.com](matthew.cobbs@gmail.com)
+                matthew.cobbs@gmail.com
             </p>
         </div>
         <div class="contact">
