--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,6 +66,7 @@
 <script>
 window._gaq = [
     ['_setAccount','UA-16683389-1'],
+    ['_setDomainName', 'github.matthewcobbs.com'],
     ['_trackPageview'],
     ['_trackPageLoadTime']
 ];
