adding fb stuff

--- a/css/style.css
+++ b/css/style.css
@@ -249,8 +249,8 @@ ul.posts {
 
 .highlight {
     outline: 1px dotted #bbb;
-    padding: 20px;
-    font-size: 80%;
+    padding: 6px 12px;
+    font-size: 90%;
 }
 
 header {
