fb comments on posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,3 +16,7 @@ layout: default
     {% endfor %}
     </ul>
 </section>
+
+<section id="comments">
+    <div class="fb-comments" data-href="{{ post.url }}" data-num-posts="2" data-width="572"></div>
+</section>
