fix fb comments page url

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,5 +18,5 @@ layout: default
 </section>
 
 <section id="comments">
-    <div class="fb-comments" data-href="{{ page.url }}" data-num-posts="2" data-width="572"></div>
+    <div class="fb-comments" data-href="http://draeton.github.com{{ page.url }}" data-num-posts="2" data-width="572"></div>
 </section>
