--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <title>{{ page.title }}</title>
-  <meta name="description" content="Matthew Cobbs - Detroit web develoepr">
+  <meta name="description" content="Matthew Cobbs - a 30 year-old web developer from Detroit">
   <meta name="author" content="Matthew Cobbs">
 
   <!-- Mobile viewport optimized: j.mp/bplateviewport -->
