--- a/css/gsearch.css
+++ b/css/gsearch.css
@@ -1,26 +1,25 @@
-
   .gsc-control-cse {
-    font-family: Arial, sans-serif;
-    border-color: #FFFFFF;
-    background-color: #FFFFFF;
+    font-family: Verdana, sans-serif;
+    border-color: #ffffff;
+    background-color: #ffffff;
   }
   input.gsc-input {
-    border-color: #777777;
+    border-color: #8A99A6;
   }
   input.gsc-search-button {
-    border-color: #333333;
-    background-color: #333333;
+    border-color: #8A99A6;
+    background-color: #D0D1D4;
   }
   .gsc-tabHeader.gsc-tabhInactive {
-    border-color: #777777;
-    background-color: #777777;
+    border-color: #B2BDC6;
+    background-color: #B2BDC6;
   }
   .gsc-tabHeader.gsc-tabhActive {
-    border-color: #333333;
-    background-color: #333333;
+    border-color: #8A99A6;
+    background-color: #8A99A6;
   }
   .gsc-tabsArea {
-    border-color: #333333;
+    border-color: #8A99A6;
   }
   .gsc-webResult.gsc-result,
   .gsc-results .gsc-imageResult {
@@ -29,50 +28,50 @@
   }
   .gsc-webResult.gsc-result:hover,
   .gsc-imageResult:hover {
-    border-color: #000000;
-    background-color: #FFFFFF;
+    border-color: #D2D6DC;
+    background-color: #EDEDED;
   }
   .gs-webResult.gs-result a.gs-title:link,
   .gs-webResult.gs-result a.gs-title:link b,
   .gs-imageResult a.gs-title:link,
   .gs-imageResult a.gs-title:link b {
-    color: #444444;
+    color: #0568CD;
   }
   .gs-webResult.gs-result a.gs-title:visited,
   .gs-webResult.gs-result a.gs-title:visited b,
   .gs-imageResult a.gs-title:visited,
   .gs-imageResult a.gs-title:visited b {
-    color: #444444;
+    color: #0568CD;
   }
   .gs-webResult.gs-result a.gs-title:hover,
   .gs-webResult.gs-result a.gs-title:hover b,
   .gs-imageResult a.gs-title:hover,
   .gs-imageResult a.gs-title:hover b {
-    color: #444444;
+    color: #0568CD;
   }
   .gs-webResult.gs-result a.gs-title:active,
   .gs-webResult.gs-result a.gs-title:active b,
   .gs-imageResult a.gs-title:active,
   .gs-imageResult a.gs-title:active b {
-    color: #777777;
+    color: #0568CD;
   }
   .gsc-cursor-page {
-    color: #444444;
+    color: #0568CD;
   }
   a.gsc-trailing-more-results:link {
-    color: #444444;
+    color: #0568CD;
   }
   .gs-webResult .gs-snippet,
   .gs-imageResult .gs-snippet,
   .gs-fileFormatType {
-    color: #333333;
+    color: #5F6A73;
   }
   .gs-webResult div.gs-visibleUrl,
   .gs-imageResult div.gs-visibleUrl {
-    color: #000000;
+    color: #5F6A73;
   }
   .gs-webResult div.gs-visibleUrl-short {
-    color: #000000;
+    color: #5F6A73;
   }
   .gs-webResult div.gs-visibleUrl-short {
     display: none;
@@ -84,38 +83,38 @@
     border-color: #FFFFFF;
   }
   .gsc-results .gsc-cursor-box .gsc-cursor-page {
-    border-color: #777777;
+    border-color: #B2BDC6;
     background-color: #FFFFFF;
-    color: #444444;
+    color: #0568CD;
   }
   .gsc-results .gsc-cursor-box .gsc-cursor-current-page {
-    border-color: #333333;
-    background-color: #333333;
-    color: #444444;
+    border-color: #8A99A6;
+    background-color: #8A99A6;
+    color: #0568CD;
   }
   .gs-promotion {
-    border-color: #CCCCCC;
-    background-color: #E6E6E6;
+    border-color: #D2D6DC;
+    background-color: #D0D1D4;
   }
   .gs-promotion a.gs-title:link,
   .gs-promotion a.gs-title:link *,
   .gs-promotion .gs-snippet a:link {
-    color: #0000CC;
+    color: #0066CC;
   }
   .gs-promotion a.gs-title:visited,
   .gs-promotion a.gs-title:visited *,
   .gs-promotion .gs-snippet a:visited {
-    color: #0000CC;
+    color: #0066CC;
   }
   .gs-promotion a.gs-title:hover,
   .gs-promotion a.gs-title:hover *,
   .gs-promotion .gs-snippet a:hover {
-    color: #444444;
+    color: #0066CC;
   }
   .gs-promotion a.gs-title:active,
   .gs-promotion a.gs-title:active *,
   .gs-promotion .gs-snippet a:active {
-    color: #00CC00;
+    color: #0066CC;
   }
   .gs-promotion .gs-snippet,
   .gs-promotion .gs-title .gs-promotion-title-right,
@@ -124,5 +123,5 @@
   }
   .gs-promotion .gs-visibleUrl,
   .gs-promotion .gs-visibleUrl-short {
-    color: #00CC00;
-  }
+    color: #5F6A73;
+  }     
