--- a/css/style.css
+++ b/css/style.css
@@ -241,10 +241,10 @@ ul.posts {
 
 .site {
   font-size: 110%;
-  text-align: justify;
+  text-align: left;
   width: 40em;
   margin: 3em auto 2em auto;
-  line-height: 1.5em;
+  line-height: 1.8em;
 }
 
 .highlight {
