--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <!-- CSS: implied media=all -->
+  <link rel="stylesheet" href="/bootstrap/bootstrap.css">
   <link rel="stylesheet" href="/css/syntax.css">
   <link rel="stylesheet" href="/css/style.css">
   <!-- end CSS-->
@@ -28,16 +29,40 @@
 </head>
 
 <body>
-<div id="fb-root"></div>
-<script>
-(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) {return;}
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=289961234369425";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));
-</script>
+    <!-- facebook api start -->
+    <div id="fb-root"></div>
+    <script>
+    (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {return;}
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=289961234369425";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+    </script>
+
+    <!-- top navigation -->
+    <div class="topbar">
+        <div class="fill">
+            <div class="container">
+                <a class="brand" href="/">Matthew Cobbs</a>
+                <ul class="nav">
+                    <li><a href="/">Home</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle">Projects</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/stitches">Stitches</a></li>
+                            <li><a href="/lockdown">Lockdown</a></li>
+                            <li><a href="/tanchor">Tanchor</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <form action="#" class="search pull-right">
+                    <input type="text" placeholder="Search"/>
+                </form>
+            </div>
+        </div>
+    </div>
 
 <div class="site">
 
@@ -70,8 +95,8 @@
 
 </div> <!--! end of .site -->
 
-<a href="https://github.com/draeton/">
-    <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67%22%20alt=%22Fork%20me%20on%20GitHub" alt="Fork me on GitHub" /></a>
+    <a href="https://github.com/draeton/">
+        <img style="position: absolute; top: 40px; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67%22%20alt=%22Fork%20me%20on%20GitHub" alt="Fork me on GitHub" /></a>
 
 <script>
 window._gaq = [
