--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,8 @@
   <!-- CSS: implied media=all -->
   <link rel="stylesheet" href="/bootstrap/bootstrap.css">
   <link rel="stylesheet" href="/css/syntax.css">
-  <link rel="stylesheet" href="/css/style.css">
+  
+  <-- link rel="stylesheet" href="/css/style.css" -->
   <!-- end CSS-->
 
   <script src="/js/libs/modernizr-2.0.6.min.js"></script>
