adding bootstrap plugins

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,11 +18,17 @@
   <!-- CSS: implied media=all -->
   <link rel="stylesheet" href="/bootstrap/bootstrap.css">
   <link rel="stylesheet" href="/css/syntax.css">
-  
   <-- link rel="stylesheet" href="/css/style.css" -->
   <!-- end CSS-->
 
+  <!-- for html5 -->
   <script src="/js/libs/modernizr-2.0.6.min.js"></script>
+  
+  <!-- twitter bootstrap -->
+  <script src="/bootstrap/js/bootstrap-dropdown.js"></script>
+  <script src="/bootstrap/js/bootstrap-buttons.js"></script>
+  <script src="/bootstrap/js/bootstrap-alerts.js"></script>
+  <script src="/bootstrap/js/bootstrap-modal.js"></script>
 
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
