data-dropdown attribute added

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
     </script>
 
     <!-- top navigation -->
-    <div class="topbar">
+    <div class="topbar" data-dropdown="dropdown">
         <div class="fill">
             <div class="container">
                 <a class="brand" href="/">Matthew Cobbs</a>
