--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,27 +49,62 @@
     </script>
 
     <!-- top navigation -->
-    <div class="topbar" data-dropdown="dropdown">
-        <div class="fill">
-            <div class="container">
-                <a class="brand" href="/">Matthew Cobbs</a>
-                <ul class="nav">
-                    <li><a href="/">Home</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle">Projects</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/stitches">Stitches</a></li>
-                            <li><a href="/lockdown">Lockdown</a></li>
-                            <li><a href="/tanchor">Tanchor</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <form action="#" class="search pull-right">
-                    <input type="text" placeholder="Search"/>
-                </form>
+    <nav>
+        <div class="topbar" data-dropdown="dropdown">
+            <div class="fill">
+                <div class="container">
+                    <a class="brand" href="/">Matthew Cobbs</a>
+                    <ul class="nav">
+                        <li class="active"><a href="/">Home</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle">Projects</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/stitches">Stitches</a></li>
+                                <li><a href="/lockdown">Lockdown</a></li>
+                                <li><a href="/tanchor">Tanchor</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <form action="#" class="search pull-right">
+                        <input type="text" placeholder="Search"/>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </nav>
+    
+    <!-- main content container -->
+    <div class="container">
+        <div class="content">
+            <div class="page-header">
+                <h1>Matthew Cobbs <small>Detroit web developer</small></h1>
+            </div>
+            <div class="row">
+                <div class="span10">
+                </div>
+                <div class="span4">
+                </div>
             </div>
         </div>
     </div>
+    
+    <!-- footer -->
+    <footer>
+        <div class="contact pull-left">
+            <p>
+                Matthew Cobbs<br />
+                Detroit Web Developer<br />
+                matthew.cobbs@gmail.com
+            </p>
+        </div>
+        <div class="contact pull-right">
+            <p>
+                <a href="http://github.com/draeton/">github.com/draeton</a><br />
+                <a href="http://twitter.com/draeton/">twitter.com/draeton</a><br />
+                &copy; 2011 Matthew Cobbs
+            </p>
+        </div>
+    </footer>
 
 <div class="site">
 
@@ -85,19 +120,6 @@
     </section>
 
     <footer>
-        <div class="contact">
-            <p>
-                Matthew Cobbs<br />
-                Detroit Web Developer<br />
-                matthew.cobbs@gmail.com
-            </p>
-        </div>
-        <div class="contact">
-            <p>
-                <a href="http://github.com/draeton/">github.com/draeton</a><br />
-                <a href="http://twitter.com/draeton/">twitter.com/draeton</a>
-            </p>
-        </div>
     </footer>
 
 </div> <!--! end of .site -->
