fixed open tag in head

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
   <!-- CSS: implied media=all -->
   <link rel="stylesheet" href="/bootstrap/bootstrap.css">
   <link rel="stylesheet" href="/css/syntax.css">
-  <-- link rel="stylesheet" href="/css/style.css" -->
+  <!-- link rel="stylesheet" href="/css/style.css" -->
   <!-- end CSS-->
 
   <!-- for html5 -->
@@ -90,19 +90,23 @@
     
     <!-- footer -->
     <footer>
-        <div class="contact pull-left">
-            <p>
-                Matthew Cobbs<br />
-                Detroit Web Developer<br />
-                matthew.cobbs@gmail.com
-            </p>
-        </div>
-        <div class="contact pull-right">
-            <p>
-                <a href="http://github.com/draeton/">github.com/draeton</a><br />
-                <a href="http://twitter.com/draeton/">twitter.com/draeton</a><br />
-                &copy; 2011 Matthew Cobbs
-            </p>
+        <div class="container">
+            <div class="content">
+                <div class="pull-left">
+                    <p>
+                        Matthew Cobbs<br />
+                        Detroit Web Developer<br />
+                        matthew.cobbs@gmail.com
+                    </p>
+                </div>
+                <div class="pull-right">
+                    <p>
+                        <a href="http://github.com/draeton/">github.com/draeton</a><br />
+                        <a href="http://twitter.com/draeton/">twitter.com/draeton</a><br />
+                        &copy; 2011 Matthew Cobbs
+                    </p>
+                </div>
+            </div>
         </div>
     </footer>
 
