updating column width

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
   <!-- CSS: implied media=all -->
   <link rel="stylesheet" href="/bootstrap/bootstrap.css">
   <link rel="stylesheet" href="/css/syntax.css">
+  <link rel="stylesheet" href="/css/draeton.css">
   <!-- link rel="stylesheet" href="/css/style.css" -->
   <!-- end CSS-->
 
@@ -41,7 +42,7 @@
     <nav>
         <div class="topbar" data-dropdown="dropdown">
             <div class="fill">
-                <div class="container">
+                <div class="container span10">
                     <a class="brand" href="/">Matthew Cobbs</a>
                     <ul class="nav">
                         <li class="active"><a href="/">Home</a></li>
@@ -63,7 +64,7 @@
     </nav>
     
     <!-- main content container -->
-    <div class="container">
+    <div class="container span10">
         <div class="content">
             <div class="page-header">
                 <h1>Matthew Cobbs <small>Detroit web developer</small></h1>
@@ -74,15 +75,13 @@
                     {{ content }}
                     
                 </div>
-                <div class="span4">
-                </div>
             </div>
         </div>
     </div>
     
     <!-- footer -->
     <footer>
-        <div class="container">
+        <div class="container span10">
             <div class="content">
                 <div class="pull-left">
                     <p>
