--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,9 +66,9 @@
     <!-- main content container -->
     <div class="container span10">
         <div class="content">
-            <div class="page-header">
+            <!-- div class="page-header">
                 <h1>Matthew Cobbs <small>Detroit web developer</small></h1>
-            </div>
+            </div -->
             <div class="row">
                 <div class="span10">
                     
