--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,7 +80,7 @@
                         matthew.cobbs@gmail.com
                     </p>
                 </div>
-                <div class="pull-right">
+                <div class="pull-right text-right">
                     <p>
                         <a href="http://github.com/draeton/">github.com/draeton</a><br />
                         <a href="http://twitter.com/draeton/">twitter.com/draeton</a><br />
