--- a/css/draeton.css
+++ b/css/draeton.css
@@ -11,10 +11,11 @@ body {
     margin-bottom: 12px;
 }
 
-#comments {
-    margin-top: 30px;
-}
-
 .text-right {
     text-align: right;
+}
+
+#osprojects,
+#blogposts {
+    margin-bottom: 30px;
 }
