trying a different page structure

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@
                     <p>
                         Matthew Cobbs<br />
                         Detroit Web Developer<br />
-                        matthew.cobbs@gmail.com
+                        draeton@gmail.com
                     </p>
                 </div>
                 <div class="pull-right text-right">
