--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
                 <div class="container span10">
                     <a class="brand" href="/">Matthew Cobbs</a>
                     <ul class="nav">
-                        <li class="active"><a href="/">Home</a></li>
+                        <li><a href="/">Home</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle">Projects</a>
                             <ul class="dropdown-menu">
