--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -122,7 +122,7 @@
     </script>
     
     <!-- google custom search -->
-    <div id="cse-modal">
+    <div id="cse-modal" class="modal fade hide">
         <div id="cse">Loading</div>
         <script src="//www.google.com/jsapi" type="text/javascript"></script>
         <script type="text/javascript"> 
