updating 404 page and search

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
                         </li>
                     </ul>
                     <form action="#" class="search pull-right">
-                        <input type="text" placeholder="Search"/>
+                        <input name="gsc" type="text" placeholder="Search"/>
                     </form>
                 </div>
             </div>
