--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <form action="#" class="search pull-right">
+                    <form action="/search.html" class="search pull-right">
                         <input name="gsc" type="text" placeholder="Search"/>
                     </form>
                 </div>
