--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,9 @@
 
   <!-- Loading everything with Modernizr -->
   <script src="/js/libs/modernizr-2.0.6.min.js"></script>
+  
+  <!-- Le fav and touch icons -->
+  <link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
