fixing project menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
                     <ul class="nav">
                         <li><a href="/">Home</a></li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle">Projects</a>
+                            <a href="javascript:void(0);" class="dropdown-toggle">Projects</a>
                             <ul class="dropdown-menu">
                                 <li><a href="/stitches">Stitches</a></li>
                                 <li><a href="/lockdown">Lockdown</a></li>
