--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -109,6 +109,7 @@
             '/bootstrap/js/bootstrap-buttons.js',
             '/bootstrap/js/bootstrap-alerts.js',
             '/bootstrap/js/bootstrap-modal.js',
+            '/bootstrap/js/bootstrap-twipsy.js',
             '/js/draeton.js',
             ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js'
         ]
