--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,11 +10,16 @@ layout: default
 
 <section id="related">
     <h2>Related Posts</h2>
-    <ul class="posts">
+    
     {% for post in site.related_posts limit:3 %}
-        <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    
+        <h4><a href="{{ post.url }}"
+        {% if post.teaser %}
+            data-placement="right" rel="twipsy" title="{{ post.teaser }}"
+        {% endif %}
+        >{{ post.title }}</a> <small>{{ post.date | date_to_string }}</small></h4>
+        
     {% endfor %}
-    </ul>
 </section>
 
 <section id="comments">
