changing top menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,9 +51,10 @@
                                 <li><a href="/tanchor">Tanchor</a></li>
                             </ul>
                         </li>
+                        <li><a href="/archives.html">Archives</a></li>
                     </ul>
                     <form action="/search.html" class="search pull-right">
-                        <input name="gsc" type="text" placeholder="Search"/>
+                        <input name="gsc" type="text" placeholder="Search" class="span3" />
                     </form>
                 </div>
             </div>
