--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
-  
+
   <!-- Le fav and touch icons -->
   <link rel="shortcut icon" href="/favicon.ico">
 </head>
@@ -49,6 +49,7 @@
                                 <li><a href="/stitches">Stitches</a></li>
                                 <li><a href="/lockdown">Lockdown</a></li>
                                 <li><a href="/tanchor">Tanchor</a></li>
+                                <li><a href="/deeplink">Deeplink</a></li>
                             </ul>
                         </li>
                         <li><a href="/archives.html">Archives</a></li>
@@ -60,16 +61,16 @@
             </div>
         </div>
     </nav>
-    
+
     <!-- main content container -->
     <div class="container span10">
         <div class="content">
-                    
+
             {{ content }}
-            
+
         </div>
     </div>
-    
+
     <!-- footer -->
     <footer>
         <div class="container span10">
@@ -95,7 +96,7 @@
     <!-- github banner -->
     <!-- a href="https://github.com/draeton/">
         <img style="position: absolute; top: 40px; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67%22%20alt=%22Fork%20me%20on%20GitHub" alt="Fork me on GitHub" /></a -->
-    
+
     <!-- loading scripts and analytics -->
     <script>
     window._gaq = [
@@ -116,7 +117,7 @@
         ]
     });
     </script>
-    
+
     <!-- facebook api start -->
     <div id="fb-root"></div>
     <script>
