Changing to full bootstrap css and js

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <!-- CSS: implied media=all -->
-  <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="/css/syntax.css">
   <link rel="stylesheet" href="/css/draeton.css">
   <!-- link rel="stylesheet" href="/css/style.css" -->
@@ -107,7 +107,7 @@
     ];
     Modernizr.load({
         load: [
-            '/bootstrap/js/bootstrap.min.js',
+            '/bootstrap/js/bootstrap.js',
             '/js/draeton.js',
             ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js'
         ]
