--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
                     <li><a href="/archives.html">Archives</a></li>
                 </ul>
                 <form action="/search.html" class="navbar-form pull-right">
-                    <input class="span3" name="gsc" type="text" placeholder="Search"/>
+                    <input class="span3" name="q" type="text" placeholder="Search"/>
                 </form>
             </div>
         </div>
