Updating tooltips and draeton.js

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,6 +55,7 @@
                 </ul>
                 <form action="/search.html" class="navbar-form pull-right">
                     <input class="span3" name="q" type="text" placeholder="Search"/>
+                    <i class="icon-search"></i>
                 </form>
             </div>
         </div>
