--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,10 +13,11 @@
   <meta name="author" content="Matthew Cobbs">
 
   <!-- Mobile viewport optimized: j.mp/bplateviewport -->
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- CSS: implied media=all -->
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="/bootstrap/css/bootstrap-responsive.css">
   <link rel="stylesheet" href="/css/syntax.css">
   <link rel="stylesheet" href="/css/draeton.css">
   <!-- link rel="stylesheet" href="/css/style.css" -->
