--- a/css/draeton.css
+++ b/css/draeton.css
@@ -15,12 +15,12 @@ body {
 }
 
 #push,
-#footer {
+footer {
     /* Set the fixed height of the footer here */
     height: 70px;
 }
 
-#footer {
+footer {
     font-size: 80%;
     background-color: #f5f5f5;
 }
@@ -28,7 +28,7 @@ body {
 /* Lastly, apply responsive CSS fixes as necessary */
 
 @media (max-width: 767px) {
-    #footer {
+    footer {
         margin-left: -20px;
         margin-right: -20px;
         padding-left: 20px;
