--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,7 +91,7 @@
                     <p>
                         <a href="http://github.com/draeton/">github.com/draeton</a><br />
                         <a href="http://twitter.com/draeton/">twitter.com/draeton</a><br />
-                        &copy; 2011-2013, Matthew Cobbs
+                        &copy;2013, Matthew Cobbs
                     </p>
                 </div>
             </div>
