--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,18 +10,18 @@ layout: default
 
 <section id="related">
     <h2>Related Posts</h2>
-    
+
     {% for post in site.related_posts limit:3 %}
-    
+
         <h4><a href="{{ post.url }}"
         {% if post.teaser %}
-            data-placement="right" rel="twipsy" title="{{ post.teaser }}"
+            data-toggle="tooltip" data-placement="right" title="{{ post.teaser }}"
         {% endif %}
         >{{ post.title }}</a> <small>{{ post.date | date_to_string }}</small></h4>
-        
+
     {% endfor %}
 </section>
 
 <section id="comments">
-    <div class="fb-comments" data-href="http://draeton.github.com{{ page.url }}" data-num-posts="2" data-width="572"></div>
+    <div class="fb-comments" data-href="http://draeton.github.com{{ page.url }}" data-num-posts="10" data-width="940"></div>
 </section>
