--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,10 @@
                         <li><a href="/archives.html">Archives</a></li>
                     </ul>
                     <form action="/search.html" class="navbar-form pull-right">
-                        <input class="span3" name="q" type="text" placeholder="Search"/>
+                        <div class="input-append">
+                            <input class="span3" name="q" type="text" placeholder="Search"/>
+                            <input type="submit" name="submit" class="add-on icon-search"/>
+                        </div>
                     </form>
                 </div>
             </div>
