--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
                     <form action="/search.html" class="navbar-form pull-right">
                         <div class="input-append">
                             <input class="span3" name="q" type="text" placeholder="Search"/>
-                            <input type="submit" name="submit" class="add-on icon-search"/>
+                            <a href="javascript:void(0);" class="add-on"><i class="icon-search"></i></a>
                         </div>
                     </form>
                 </div>
