--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,11 +72,13 @@
     </div>
 
     <!-- main content container -->
-    <div class="container">
-        <div class="content">
+    <div id="main">
+        <div class="container">
+            <div class="content">
 
-            {{ content }}
+                {{ content }}
 
+            </div>
         </div>
     </div>
 
