--- a/css/draeton.css
+++ b/css/draeton.css
@@ -2,6 +2,11 @@
 
 body {
     padding-top: 60px;
+    background-color: #f5f5f5;
+}
+
+#main {
+    background-color: #ffffff;
 }
 
 /* Footer styles */
