--- a/css/draeton.css
+++ b/css/draeton.css
@@ -2,10 +2,10 @@
 
 body {
     padding-top: 60px;
-    background-color: #f5f5f5;
+    background-color: #f5f5f5 !important;
 }
 
-#main {
+#wrap {
     background-color: #ffffff;
 }
 
