--- a/css/draeton.css
+++ b/css/draeton.css
@@ -1,12 +1,29 @@
 /* For sticky top nav */
 
+html,
 body {
+    height: 100%;
+}
+
+#wrap {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -100px;
+}
+
+#wrap > .container {
     padding-top: 60px;
+}
+
+#push {
+    height: 100px;
 }
 
 /* Footer styles */
 
 footer {
+    height: 100px;
     font-size: 80%;
     background-color: #f5f5f5;
     padding: 10px 0;
