--- a/css/draeton.css
+++ b/css/draeton.css
@@ -23,10 +23,19 @@ body {
 /* Footer styles */
 
 footer {
-    height: 100px;
+    height: 80px;
+    padding: 10px 0;
     font-size: 80%;
     background-color: #f5f5f5;
-    padding: 10px 0;
+}
+
+@media (max-width: 767px) {
+    footer {
+        margin-left: -20px;
+        margin-right: -20px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
 
 /* Navbar search form */
