--- a/css/draeton.css
+++ b/css/draeton.css
@@ -10,6 +10,7 @@ body {
     height: auto !important;
     height: 100%;
     margin: 0 auto -100px;
+    background-image: url(/img/bg/subtle-pattern-6.gif);
 }
 
 #wrap > .container {
@@ -27,7 +28,7 @@ footer {
     padding: 10px 0;
     font-size: 80%;
     background-color: #f5f5f5;
-    background-image: url(/img/bg/light-tile.gif);
+    background-image: url(/img/bg/dark-metal-grid-4.gif);
 }
 
 @media (max-width: 767px) {
@@ -49,7 +50,8 @@ footer {
 /* Hero unit */
 
 .hero-unit {
-    background-image: url(/img/bg/light-tile.gif);
+    background-image: url(/img/bg/dark-metal-grid-4.gif);
+    color: #ffffff;
 }
 
 /* General content styles */
