--- a/css/draeton.css
+++ b/css/draeton.css
@@ -61,6 +61,7 @@ footer {
     background-image: -o-linear-gradient(top, #ffffff, #f2f2f2);
     background-image: linear-gradient(to bottom, #ffffff, #f2f2f2);
     background-repeat: repeat-x;
+    border-top: 1px solid #d4d4d4;
 }
 
 @media (max-width: 767px) {
