--- a/css/draeton.css
+++ b/css/draeton.css
@@ -10,7 +10,7 @@ body {
     height: auto !important;
     height: 100%;
     margin: 0 auto -100px;
-    background-image: url(/img/bg/tile.gif);
+    background-image: url(/img/bg/tile2.gif);
 }
 
 #wrap > .container {
