--- a/css/draeton.css
+++ b/css/draeton.css
@@ -47,6 +47,12 @@ body {
           box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
 }
 
+@media (max-width: 480px) {
+    .hero-unit {
+        padding: 30px;
+    }
+}
+
 /* Footer styles */
 
 footer {
