--- a/css/draeton.css
+++ b/css/draeton.css
@@ -198,4 +198,7 @@ pre code {
     text-indent: 6px;
     font-size: 12px;
     line-height: 24px;
+    -webkit-border-radius: 6px 6px 0 0;
+     -moz-border-radius: 6px 6px 0 0;
+          border-radius: 6px 6px 0 0;
 }
