--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,9 +9,9 @@ layout: default
 </article>
 
 <section id="related">
-    <h2>Related Posts</h2>
+    <h2>Related Posts <small><a href="/archives.html">Read all posts &raquo;</a></small></h2>
 
-    {% for post in site.related_posts limit:6 %}
+    {% for post in site.related_posts limit:3 %}
 
         <h4><a href="{{ post.url }}"
         {% if post.teaser %}
