--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
 </article>
 
 <section id="related">
-    <h3>Related Posts <small><a href="/archives.html">Read all posts &raquo;</a></small></h3>
+    <h3>Related Posts <small><a href="/archives.html">read all &raquo;</a></small></h3>
 
     {% for post in site.related_posts limit:3 %}
 
