--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
 
     <div class="span4">
         <section id="related">
-            <h3>Related Posts <small><a href="/archives.html">read all &raquo;</a></small></h3>
+            <h3><a href="/archives.html">Related Posts</a></h3>
 
             {% for post in site.related_posts limit:3 %}
 
