--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,8 +12,8 @@ layout: default
     </div>
 
     <div class="span4">
-        <section id="related">
-            <h3><a href="/archives.html">Related Posts</a></h3>
+        <section id="related" class="well well-small">
+            <h3>Related Posts <small><a href="/archives.html">Read all&hellip;</a></small></h3>
 
             {% for post in site.related_posts limit:3 %}
 
