--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
                 {% if post.teaser %}
                     data-toggle="tooltip" data-placement="right" title="{{ post.teaser }}"
                 {% endif %}
-                >{{ post.title }}</a> <small>{{ post.date | date_to_string }}</small></h5>
+                >{{ post.title }}</a></h5>
 
             {% endfor %}
         </section>
