--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
 
                 <h5><a href="{{ post.url }}"
                 {% if post.teaser %}
-                    data-toggle="tooltip" data-placement="right" title="{{ post.teaser }}"
+                    data-toggle="tooltip" data-placement="top" title="{{ post.teaser }}"
                 {% endif %}
                 >{{ post.title }}</a></h5>
 
