--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,11 +17,7 @@ layout: default
 
             {% for post in site.related_posts limit:3 %}
 
-                <h5><a href="{{ post.url }}"
-                {% if post.teaser %}
-                    data-toggle="tooltip" data-placement="top" title="{{ post.teaser }}"
-                {% endif %}
-                >{{ post.title }}</a></h5>
+                <h5><a href="{{ post.url }}">{{ post.title }}</a></h5>
 
             {% endfor %}
         </section>
