--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,11 +15,13 @@ layout: default
         <section id="related" class="well well-small">
             <h3>Related Posts <small><a href="/archives.html">Read all &raquo;</a></small></h3>
 
+            <ul>
             {% for post in site.related_posts limit:3 %}
 
-                <h5><a href="{{ post.url }}">{{ post.title }}</a></h5>
+                <li><h5><a href="{{ post.url }}">{{ post.title }}</a></h5></li>
 
             {% endfor %}
+            </ul>
         </section>
     </div>
 </div>
