--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
 
     <div class="span4">
         <section id="related" class="well well-small">
-            <h3>Related Posts <a href="#" class="btn btn-mini btn-primary">Read all &raquo;</a></h3>
+            <h3>Related Posts <a href="/archives.html" class="btn btn-mini btn-primary">Read all &raquo;</a></h3>
 
             <ul>
             {% for post in site.related_posts limit:3 %}
