--- a/code/stitches/src/templates/stitches.html
+++ b/code/stitches/src/templates/stitches.html
@@ -4,13 +4,14 @@
         <!-- .stitches-toolbar -->
         <div class="stitches-toolbar btn-toolbar">
             <div class="btn-group shrink">
+                <a href="http://draeton.github.com/stitches/" class="btn btn-small btn-link"><strong>Stitches</strong></a>
                 <button data-action="open" class="btn btn-small files" title="Open"><i class="icon-folder-open"></i> <span>Open</span><input class="file" type="file" multiple=""></button>
                 <button data-action="settings" class="btn btn-small" title="Settings"><i class="icon-cog"></i> <span>Settings</span></button>
                 <button data-action="reset" class="btn btn-small disabled hide" title="Reset"><i class="icon-refresh"></i> <span>Reset</span></button>
                 <button data-action="generate" class="btn btn-small disabled" title="Generate"><i class="icon-tasks"></i> <span>Generate</span></button>
                 <button data-action="clear" class="btn btn-small disabled" title="Clear"><i class="icon-remove"></i> <span>Clear</span></button>
             </div>
-            <div class="btn-group">
+            <div class="btn-group shrink">
                 <a href="javascript:void(0);" data-action="spritesheet" class="btn btn-small disabled" title="Spritesheet" target="_blank"><i class="icon-download-alt"></i> <span>Spritesheet</span></a>
                 <a href="javascript:void(0);" data-action="stylesheet" class="btn btn-small disabled" title="Stylesheet" target="_blank"><i class="icon-download-alt"></i> <span>Stylesheet</span></a>
             </div>
@@ -179,7 +180,7 @@
                     <div class="stitches-palette-body">
                         <p>Drag and drop image files onto the space below, or use the &ldquo;Open&rdquo; link to load images using the file browser. Then, click &ldquo;Generate&rdquo; to create a sprite sheet and stylesheet. <em>This demo uses a couple of HTML5 APIs, and it is only currently compatible with the latest versions of Chrome and Firefox.</em></p>
 
-                        <p>Stitches is developed by <a href="http://draeton.github.com">Matthew Cobbs</a> in concert with the lovely open-source community at <a href="http://github.com">Github</a>.</p>
+                        <p>Stitches is developed by <a href="http://draeton.github.com">Matthew Cobbs</a> in concert with the lovely open-source community at <a href="http://github.com">Github</a>. Thanks are owed to the developers at Twitter for <a href="http://twitter.github.com/bootstrap">Bootstrap</a>, and <a href="http://glyphicons.com/">Glyphicons</a> for some cool little icons.</p>
                     </div>
 
                     <div class="stitches-palette-footer">
